[gd_scene load_steps=2 format=3 uid="uid://dewldqjxnsibk"]

[ext_resource type="Script" uid="uid://5svchfdky1xm" path="res://scripts/pause_menu.gd" id="1_n87rw"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -298.5
offset_top = -172.0
offset_right = 298.5
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -285.0
offset_top = -147.0
offset_right = 334.0
offset_bottom = 266.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.913725, 0.74902, 0, 0.0901961)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -64.0
offset_right = 52.5
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "ðŸ¦† Paused  ðŸ¦†"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Resume"

[node name="OptionsButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Options"

[node name="ExitButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="GridContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="GridContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="GridContainer/ExitButton" to="." method="_on_exit_button_pressed"]
